# PopupSim

./: .gitignore  .pre-commit-config.yaml  README.md  configuration.yaml  data.json  model_proposal.json  pyproject.toml
.github/workflows/: ci-cd.yaml
.pyre/: pyre.stderr
notebooks/: test.py
src/control-center/: .dockerignore  .env  .env.local.template  .env.production  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .npmrc  .pa11yci  .stylelintrc.json  Dockerfile  LICENSE  README.md  _redirects  data.json  index.html  lighthouserc.cjs  package-lock.json  package.json  playwright.config.ts  renovate.json5  sample_simulation_output.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
src/control-center/docs/: auth.md
src/control-center/docs/adr/: 2022-02-11_vue-design-decisions.md  2022-02-21_auth-library.md  2022-02-28_i18n.md  2022-03-03_open-source-licenses.md  2023-06-15_end-to-end-testing.md  2023-10-20_confidential-client-auth.md
src/control-center/e2e/: HomePage.ts  home.spec.ts
src/control-center/pipeship/: values.yaml
src/control-center/public/: sample_simulation_output.json  topology.yaml
src/control-center/src/: App.vue  main.ts  shims-vue.d.ts  styles.scss
src/control-center/src/components/: AppInput.vue  AppTextarea.vue  ParameterForm.vue  QuoteCard.vue  QuoteForm.vue  TheFooter.vue  TheHeader.vue  TheModal.vue  TrackConfiguration.vue
src/control-center/src/locales/: de.yml  en.yml  index.ts
src/control-center/src/router/: index.ts
src/control-center/src/stores/: auth.ts  parameters.ts  (+3 more)
src/shared/: configuration.json  topology.yaml
src/simulator/: README.md  config.py  global_setting.py  main.py  run_simulation.py
src/simulator/components/: locomotive.py  track_collection.py  wagon.py  workshop_track.py
visualiser/: model_proposal.json  sample.ipynb
(+26 files in other folders)
